--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                     <a href="#contact" class="btn btn-secondary">Contact Us</a>
                 </div>
             </div>
-            <!-- <img src="/api/placeholder/500/500" alt="Neural decoding visualization" class="hero-img" /> -->
+            <img src="logo.jpg" alt="Neural decoding visualization" class="hero-img" />
         </div>
     </section>
 
