--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <!-- <div>
                     <h4 class="footer-heading">Resources</h4>
                     <ul class="footer-links">
                         <li><a href="#">Blog</a></li>
@@ -865,7 +865,7 @@
                         <li><a href="#">Case Studies</a></li>
                         <li><a href="#">API Reference</a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 NeuroReason. All rights reserved.</p>
