--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             width: 40%;
             max-width: 500px;
             z-index: 1;
-            border-radius: 10px;
+            border-radius: 100%;
             box-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
         }
         
