--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         
         .problem-img {
             width: 100%;
-            border-radius: 0.5rem;
+            border-radius: 100%;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         
@@ -574,7 +574,7 @@
                     </ul>
                     <p>For enterprises deploying AI solutions, this opacity creates significant business and compliance risks, hampering adoption in high-stakes environments.</p>
                 </div>
-                <img src="depressed_image.jpg" alt="AI black box problem illustration" class="problem-img" />
+                <img src="why.png" alt="AI black box problem illustration" class="problem-img" />
             </div>
         </div>
     </section>
