--- a/index.html
+++ b/index.html
@@ -886,11 +886,11 @@
                         </div>
                     </a>
                     
-                    <a href="https://www.whiteboxresearch.org" target="_blank" rel="noopener noreferrer">
+                    <!-- <a href="https://www.whiteboxresearch.org" target="_blank" rel="noopener noreferrer">
                         <div class="partner-logo">
                             <img src="partners/whitebox.png" alt="Partner Institution 5" />
                         </div>
-                    </a>
+                    </a> -->
                     <!-- <div class="partner-logo">
                         <img src="/api/placeholder/200/80" alt="Partner Institution 6" />
                     </div>
@@ -919,11 +919,11 @@
                         </div>
                     </a>
                     
-                    <a href="https://www.whiteboxresearch.org" target="_blank" rel="noopener noreferrer">
+                    <!-- <a href="https://www.whiteboxresearch.org" target="_blank" rel="noopener noreferrer">
                         <div class="partner-logo">
                             <img src="partners/whitebox.png" alt="Partner Institution 5" />
                         </div>
-                    </a>-->
+                    </a>--> -->
                 </div>
             </div>
         </div>
