--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
                     <!-- <div class="partner-logo">
                         <img src="/api/placeholder/200/80" alt="Partner Institution 6" />
                     </div>
-                    <!-- Duplicate set for seamless infinite scroll -->
+                    Duplicate set for seamless infinite scroll -->
                     <a href="https://www.ntu.edu.sg" target="_blank" rel="noopener noreferrer">
                         <div class="partner-logo">
                             <img src="partners/ntu.jpg" alt="Partner Institution 1" />
@@ -923,7 +923,7 @@
                         <div class="partner-logo">
                             <img src="partners/whitebox.png" alt="Partner Institution 5" />
                         </div>
-                    </a>--> -->
+                    </a>-->
                 </div>
             </div>
         </div>
