--- a/index.html
+++ b/index.html
@@ -696,8 +696,10 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3>White-Box Deployed Models</h3>
-                                <p>Our service is based on white-box deployed models that allow us to analyze internal neural activations at every step.</p>
+                                <!-- <h3>White-Box Deployed Models</h3>
+                                <p>Our service is based on white-box deployed models that allow us to analyze internal neural activations at every step.</p> -->
+                                <h3>Custom Model Training </h3>
+​                                <p>Provides exclusivity with complete privacy and custom checks for safe deployment.</p>
                             </div>
                         </div>
                         <div class="feature-item">
@@ -707,8 +709,21 @@
                                 </svg>
                             </div>
                             <div>
-                                <h3>Transparent Reasoning</h3>
-                                <p>NeuroReason studies the model's behavior to translate internal neural activations into human-understandable explanations.</p>
+                                <!-- <h3>Transparent Reasoning</h3>
+                                <p>NeuroReason studies the model's behavior to translate internal neural activations into human-understandable explanations.</p> -->
+                                <h3>Interpretability & Reasoning Visualization</h3>
+                                <p>Focus on “Why did the model make this prediction?” focused on regulated industries like "finance".</p>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h3>Hallucination/Misalignment Detection</h3>
+                                <p>Offer a “hallucination score” or warning system, combining internal activation checks with external retrieval/citation (like Perplexity).</p>
                             </div>
                         </div>
                         <div class="feature-item">
