--- a/index.html
+++ b/index.html
@@ -675,10 +675,10 @@
             <!-- Research Mission -->
             <div style="max-width: 1000px; margin: 0 auto 4rem; text-align: center;">
                 <h3 style="margin-bottom: 2rem; color: var(--primary); font-size: 2rem;">Our Research Mission</h3>
-                <p style="font-size: 1.2rem; margin-bottom: 2rem; line-height: 1.7;">We conduct foundational research in AI alignment, mechanistic interpretability, and transparent reasoning systems. Our work addresses the critical challenge of ensuring AI systems remain beneficial, aligned, and understandable as they become more powerful.</p>
+                <p style="font-size: 1.2rem; margin-bottom: 2rem; line-height: 1.7;">We conduct foundational research in AI agent governance, faithful mechanistic interpretability, and actionable monitoring systems for web-connected AI agents. Our work addresses the critical challenge of ensuring autonomous AI agents remain beneficial, controllable, and transparent as they evolve into sophisticated "digital citizens" operating across the open web.</p>
                 
                 <div style="background-color: rgba(44, 44, 44, 0.05); padding: 2rem; border-radius: 12px; border-left: 4px solid var(--primary); text-align: left; max-width: 800px; margin: 0 auto;">
-                    <p style="font-style: italic; margin: 0; font-size: 1.1rem; line-height: 1.6;"><strong>Research Philosophy:</strong> We believe that advancing AI capabilities and AI safety must go hand in hand. Our research directly informs the development of safer, more transparent AI systems for critical applications.</p>
+                    <p style="font-style: italic; margin: 0; font-size: 1.1rem; line-height: 1.6;"><strong>Research Philosophy:</strong> We believe that building governance infrastructure for AI agents is as urgent as advancing their capabilities. Rather than relying on government regulation, our research develops market-driven solutions that create economic incentives for safe agent behavior. We prioritize faithful evaluation over fashionable applications, ensuring our monitoring and interpretability methods actually work in real-world scenarios rather than just in controlled laboratory settings. Our research directly informs the development of actionable governance systems that can detect, understand, and steer agent behavior in the increasingly complex multi-agent web ecosystem.</p>
                 </div>
             </div>
                 <!-- <div style="text-align: center;">
@@ -691,46 +691,46 @@
                 <h3 style="text-align: center; margin-bottom: 2rem; color: var(--primary);">Current Research Areas</h3>
                 <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 2rem;">
                     <div style="background-color: var(--cream); padding: 2rem; border-radius: 8px; border: 1px solid var(--silver);">
-                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;">Mechanistic Interpretability</h4>
-                        <p>Developing methods to understand the internal mechanisms of neural networks, including causal abstraction theory and sparse autoencoders for knowledge disentanglement.</p>
-                        <ul style="margin-left: 1.5rem; margin-top: 1rem;">
+                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;">Market-Driven Agent Governance Infrastructure</h4>
+                        <p>The Center for AI Governance has proposed managing AI agents through individual web IDs. We take a similar infrastructure approach but replace government oversight with market-based incentives, using economic forces to create a self-regulating digital ecosystem that naturally encourages good agent behavior. To read our detailed proposal, please request access to our <a href="https://www.google.com/?client=safari">research document</a>. </p>
+                        <!-- <ul style="margin-left: 1.5rem; margin-top: 1rem;">
                             <li>Causal abstraction frameworks</li>
                             <li>Sparse autoencoder analysis</li>
                             <li>Modular neural architectures</li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div style="background-color: var(--cream); padding: 2rem; border-radius: 8px; border: 1px solid var(--silver);">
-                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;">AI Alignment & Safety</h4>
-                        <p>Research into value learning, alignment verification, and safety mechanisms to ensure AI systems remain beneficial and aligned with human values.</p>
-                        <ul style="margin-left: 1.5rem; margin-top: 1rem;">
+                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;">Faithfulness Mechanistic Interpretability Methods</h4>
+                        <p>Mechanistic Interpretability techniques like Sparse Autoencoders are being rapidly adopted for applications like concept erasers, but their actual reliability remains largely untested. Our research rigorously evaluates these popular methods to determine when they work, when they fail, and how they can be improved. We focus on closing the gap between promising theory and real-world performance. To read our detailed evaluation framework, please request access to our <a href="https://www.google.com/?client=safari">research document</a>. </p>
+                        <!-- <ul style="margin-left: 1.5rem; margin-top: 1rem;">
                             <li>Value learning systems</li>
                             <li>Alignment evaluation methods</li>
                             <li>Safety monitoring frameworks</li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div style="background-color: var(--cream); padding: 2rem; border-radius: 8px; border: 1px solid var(--silver);">
-                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;">Harmful Output Detection</h4>
-                        <p>Developing SafetyNet and other systems to detect and prevent harmful, deceptive, or inappropriate AI outputs through behavioral modeling.</p>
-                        <ul style="margin-left: 1.5rem; margin-top: 1rem;">
+                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;">Actionable Agent Monitoring Systems</h4>
+                        <p>Current agent monitoring relies heavily on Chain of Thought, but this approach can be misleading and provides no clear way to intervene when problems arise. We propose monitoring systems that are both faithful and actionable—not only detecting when agents deviate from desired behavior, but also providing clear mechanisms to steer them back on track. To read our detailed framework, please request access to our <a href="https://www.google.com/?client=safari">research document</a>. </p>
+                        <!-- <ul style="margin-left: 1.5rem; margin-top: 1rem;">
                             <li>Deceptive behavior modeling</li>
                             <li>Real-time safety monitoring</li>
                             <li>Harmful content detection</li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <div style="background-color: var(--cream); padding: 2rem; border-radius: 8px; border: 1px solid var(--silver);">
-                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;">AI Governance & Policy</h4>
-                        <p>Research into AI governance frameworks, regulatory approaches, and policy recommendations for safe AI development and deployment.</p>
-                        <ul style="margin-left: 1.5rem; margin-top: 1rem;">
+                        <h4 style="color: var(--primary-light); margin-bottom: 1rem;"> Adversarial Information Leakage Methods</h4>
+                        <p>As AI agents gain access to sensitive information across legal, financial, and healthcare domains, understanding how they can be manipulated to leak confidential data becomes critical for building robust security measures. Our research systematically investigates various jailbreaking techniques and prompt injection methods that could cause deployed models to inadvertently expose privileged information. To read our detailed framework, please request access to our <a href="https://www.google.com/?client=safari">research document</a>.</p>
+                        <!-- <ul style="margin-left: 1.5rem; margin-top: 1rem;">
                             <li>Governance frameworks</li>
                             <li>Policy analysis and recommendations</li>
                             <li>Regulatory compliance research</li>
-                        </ul>
-                    </div>
+                        </ul> -->
+                    </div> 
                 </div>
             </div>
             
             <!-- Research Impact -->
-            <div style="background-color: var(--cream); padding: 2rem; border-radius: 8px; border: 1px solid var(--silver);">
+            <!-- <div style="background-color: var(--cream); padding: 2rem; border-radius: 8px; border: 1px solid var(--silver);">
                 <h3 style="text-align: center; margin-bottom: 2rem; color: var(--primary);">Research Impact & Collaborations</h3>
                 <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 2rem;">
                     <div style="text-align: center;">
@@ -770,7 +770,7 @@
                         <p>Research-backed products bringing safety advances to market</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
