--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
         }
         
         .hero-content {
-            max-width: 600px;
+            /* max-width: 600px;*/
+            max-width: 100%;
             position: relative;
             z-index: 2;
         }
@@ -660,7 +661,7 @@
                     <a href="#legal-ai" class="btn btn-secondary">Legal AI Applications</a>
                 </div>
             </div>
-            <img src="logo.jpg" alt="AI Governance Research Institute" class="hero-img" />
+            <!-- <img src="logo.jpg" alt="AI Governance Research Institute" class="hero-img" /> -->
         </div>
     </section>
 
